--- a/requirements.yml
+++ b/requirements.yml
@@ -43,4 +43,6 @@
   name: swap_file
 - src: git+https://gitlab.com/osas/ansible-role-httpd_wsgi.git
   name: httpd_wsgi
+- src: git+https://gitlab.com/osas/ansible-role-data_movebind.git
+  name: data_movebind
 
