Add email for zuul
We want to use zuul@ovirt.org as a From address and so that
replies to it don't cause bounces I've added an alias which
just dumps such emails to /dev/null

Change-Id: Id04cbe99a8701b5dbdda93ee4a1ca45de2d6ee81
Signed-off-by: Evgheni Dereveanchin <ederevea@redhat.com>

--- a/playbooks/deploy.yml
+++ b/playbooks/deploy.yml
@@ -115,6 +115,8 @@
         kubevirt-ci: infra-private
         # default assignee in bugzilla, no reply expected
         bugs: /dev/null
+        # email used by Zuul, we don't need the replies
+        zuul: /dev/null
       use_simple_tls: True
       # social_auth is defined in host_vars
       # caught by underlying 'mailman3' role
