--- a/ansible.cfg
+++ b/ansible.cfg
@@ -192,6 +192,7 @@ connection_plugins = ./plugins/connection
 lookup_plugins     = ./plugins/lookup
 vars_plugins       = ./plugins/vars
 filter_plugins     = ./plugins/filter
+strategy_plugins   = ./plugins/strategy
 
 
 # by default, ansible will use the 'linear' strategy but you may want to try
