add new glance.ovirt.org in the Community Cage
Change-Id: I77dc93cced070475fe901cd533c7695d0ae8b992

--- a/hosts.yml
+++ b/hosts.yml
@@ -9,6 +9,9 @@ all:
     www.ovirt.org:
       # TODO: remove when DNS is switched
       ansible_host: 8.43.85.224
+    glance.ovirt.org:
+      # TODO: remove when DNS is switched
+      ansible_host: 8.43.85.218
 
   children:
     phx_zone:
