Use local DNS servers
Using a local caching server is likely to improve performance. Also
using a worldwide server has drawbacks, like being unable to properly
use URIBL:
  http://uribl.com/refused.shtml

glance.ovirt.org was not in the OSCI zone, fixed to get this working.

Change-Id: Id4660b2320903dc45ddf3ce816ea58cd64425926

--- a/hosts.yml
+++ b/hosts.yml
@@ -23,7 +23,9 @@ all:
         mail.ovirt.org:
         monitoring.ovirt.org:
         www.ovirt.org:
+        glance.ovirt.org:
       vars:
+        nameservers: "{{ osci.dns }}"
         mail_forwarder: "{{ osci.mail_forwarder }}"
       children:
         osci_internal_zone:
@@ -37,4 +39,6 @@ all:
     web_builders:
       hosts:
         ovirt-web-builder.int.osci.io:
+
+    dns_servers:
 
