--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -6,6 +6,32 @@
     - "sys_{{ ansible_distribution }}.yml"
     - "sys_{{ ansible_os_family }}.yml"
 
+- name: Manage DNS Settings
+  block:
+    - name: Tell NM to not care about DNS Settings
+      ini_file:
+        path: /etc/NetworkManager/NetworkManager.conf
+        section: main
+        option: dns
+        value: none
+      register: nm_config
+    - name: Restart NM
+      service:
+        name: NetworkManager
+        state: restarted
+      when: nm_config.changed
+    - name: Configure DNS Resolution
+      template:
+        src: resolv.conf
+        dest: /etc/resolv.conf
+        owner: root
+        group: root
+        mode: 0644
+  when:
+    - playbook_test_mode is not defined
+    - ansible_os_family == 'RedHat'
+  tags: dns
+
 # do not merge with next item, since epel need to be installed first
 - name: install Epel
   package: pkg=epel-release state=present
