ml: add didi to the list of admins
Change-Id: I8a4050b73442c45be9598fb21731d4e08a2c75f8

--- a/playbooks/deploy.yml
+++ b/playbooks/deploy.yml
@@ -82,6 +82,7 @@
         - eyal
         - ederevea
         - doronf
+        - didi
       mail_aliases:
         # Person who should get root's mail
         root: "{{ ['root'] + ovirt_infra_emails }}"
