blogs moved to WP
Change-Id: I1bdfdbe1e0631df3da4cd58d9da72de05d8a1f13

--- a/playbooks/deploy.yml
+++ b/playbooks/deploy.yml
@@ -276,6 +276,9 @@
         redirects:
           - src: /stats
             target: https://ovirt.biterg.io/
+          - src: "^/blog/(.*)"
+            target: "http://blogs.ovirt.org/$1"
+            match: True
 
 - hosts: www.ovirt.org
   tasks:
