blogs moved to WP #2
Add redirect for pages ending with ".html" too.

Change-Id: Ica6b1f6502e7e116d33fe955d17ae6ebf8d2a769

--- a/playbooks/deploy.yml
+++ b/playbooks/deploy.yml
@@ -276,6 +276,9 @@
         redirects:
           - src: /stats
             target: https://ovirt.biterg.io/
+          - src: "^/blog/(.*)\\.html"
+            target: "http://blogs.ovirt.org/$1/"
+            match: True
           - src: "^/blog/(.*)"
             target: "http://blogs.ovirt.org/$1"
             match: True
