Workaround Django vhost filtering done wrong
@ovirt.org mails are mapped to the lists.ovirt.org vhost and all lists
should appear when going to this vhost but it's empty. Investigation
needed.

Change-Id: Ife70390aae858529b7c4cb721980daf78d86dc8b

--- a/playbooks/mail.yml
+++ b/playbooks/mail.yml
@@ -134,6 +134,8 @@
           - jira
           - jenkins
         use_custom_favicon: True
+        # TODD: workaround Django vhost filtering not working well
+        multi_domains: false
       tags: ml_install_core
 
     - name: Configure web access to old ML archives
