adapt TLS settings for dovecot
the way the `use_simple_tls` parameters in the `mailing-lists-server` is
implemented changed and we cannot count on these variable to be set
anymore.

Change-Id: I81a5209a406ad356cd2169fee1ddd856c9c72d5d

--- a/playbooks/mail.yml
+++ b/playbooks/mail.yml
@@ -214,6 +214,9 @@
         with_pop3: true
         # inherit TLS settings from 'mailing-lists-server' role
         auth: yaml-dict
+        cert_file: "/etc/letsencrypt/live/lists.ovirt.org/fullchain.pem"
+        key_file: "/etc/letsencrypt/live/lists.ovirt.org/privkey.pem"
+        ca_file: /etc/pki/tls/cert.pem
 
     - name: install Dovecot users
       copy:
