--- a/playbooks/web/www.ovirt.org.yml
+++ b/playbooks/web/www.ovirt.org.yml
@@ -49,4 +49,10 @@
           - src: "^/blog/(.*)"
             target: "http://blogs.ovirt.org/$1"
             match: True
+          # make the old path still works as it is used in ML footers
+          - src: "^/site/privacy-policy/$$"
+            target: "https://www.ovirt.org/privacy-policy.html"
+            match: True
+
+  tags: www.ovirt.org_vhost
 
