Added keys for Ehud, Krapali and Shlomi
Keys have been added to let admin_ssh_ekys role install them
for all infra members

Change-Id: I2831bcc92d9c6ce6c32d7179e01407d4e9bf03fe
Signed-off-by: Shlomi Zidmi <szidmi@redhat.com>

--- a/roles/admin_ssh_keys/tasks/main.yml
+++ b/roles/admin_ssh_keys/tasks/main.yml
@@ -13,6 +13,9 @@
   - bkorren.pub
   - amarchuk.pub
   - grosenth.pub
+  - szidmi.pub
+  - eyonasi.pub
+  - krrai.pub
 
 - name: Remove old root ssh keys
   authorized_key:
