update mail aliases
Change-Id: Iffccafbec46ccefc4710d498be1be245dde0192b

--- a/playbooks/mail.yml
+++ b/playbooks/mail.yml
@@ -102,6 +102,7 @@
           wordpress: community
           twitter: community
           identica: community
+          eventbrite: community
           ovirtbot: "{{ eedri_mail }}"
           kerri: "{{ kerri_mail }}"
           pr: "{{ ovirt_press_emails }}"
