--- a/ansible.cfg
+++ b/ansible.cfg
@@ -11,6 +11,8 @@
 
 # some basic default values...
 
+interpreter_python = auto
+
 inventory      = ./hosts.yml
 library        = ./library
 #module_utils   = /usr/share/my_module_utils/
