--- a/hosts.yml
+++ b/hosts.yml
@@ -6,6 +6,7 @@ all:
       # TODO: remove when DNS is switched
       ansible_host: 8.43.85.199
     ovirt-web-builder.int.osci.io:
+      ansible_python_interpreter: /usr/bin/python3
     www.ovirt.org:
       # TODO: remove when DNS is switched
       ansible_host: 8.43.85.224
