--- a/requirements.yml
+++ b/requirements.yml
@@ -25,7 +25,7 @@
   name: httpd
 - src: git+https://vcs-git.duckcorp.org/duckcorp/ansible-role-httpd_php
   name: httpd_php
-- src: git+https://github.com/OSAS/ansible-role-web_builder.git
+- src: git+https://gitlab.com/osci/ansible-role-web_builder.git
   name: builder
 - src: git+https://gitlab.com/osas/ansible-role-msmtp.git
   name: msmtp
