--- a/playbooks/web/www.ovirt.org.yml
+++ b/playbooks/web/www.ovirt.org.yml
@@ -40,6 +40,8 @@
         use_letsencrypt: True
         mail_domain: ovirt.org
         force_tls: True
+        hsts_include_subdomains: True
+        hsts_preload: True
 
   tags: www.ovirt.org_vhost
 
