base: do not fail if nameservers not set
Initially the inventory only contained OSPO hosts and that was fine.
When adding non-OSPO host it failed because `nameservers` were not
defined. But we might not always wish to enforce NS servers, especially
when a cloud provider sets them in its image or during instantiation.

Change-Id: I150e33b2cde54250ac30dad148a7eceaa737d450

--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -30,6 +30,7 @@
   when:
     - playbook_test_mode is not defined
     - ansible_os_family == 'RedHat'
+    - nameservers is defined
   tags: dns
 
 # do not merge with next item, since epel need to be installed first
