monitoring: switch to PHP-FPM
mod_php is long deprecated and the httpd_php role is no longer
maintained (and the repo moved aside to make it clear, unfortunately
breaking the deployment in the process).

Also fix graphs which were broken in the previous configuration by
adapting the open paths and disabled functions.

Change-Id: I2492f4c12dd3f08b25d9aa314536bd0a316337e3

--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,7 @@ roles/memcached
 roles/postgresql
 roles/mailman3
 roles/httpd
-roles/httpd_php
+roles/httpd_php_fpm
 roles/tor
 roles/postgrey
 roles/postfix
